--- a/fireSim.org
+++ b/fireSim.org
@@ -1,7 +1,8 @@
+# -*- org-babel-tangled-file: t; org-babel-tangle-run-postTangleScript: t; -*-
+
 #+TITLE:     fireSim.org
-#+AUTHOR:    Charles C. Berry    
-#+EMAIL:     cberry@tajo.ucsd.edu
-#+DATE:      2010-12-08 Thur
+#+AUTHOR:    Rainer M Krig
+#+EMAIL:     Rainer@krugs.de
 #+DESCRIPTION: R Package Development Helpers
 #+KEYWORDS: 
 
@@ -88,23 +89,21 @@ Org-babel support for building
 
 ** Post tangle script
 #+begin_src sh :results output :tangle ./postTangleScript.sh :var VER=(vc-working-revision (buffer-file-name)) :var STATE=(vc-state (or (buffer-file-name) org-current-export-file))
-  sed -i s/MAJORVERSION/$MAJORVERSION/ ./DESCRIPTION
-  sed -i s/MINORVERSION/$MINORVERSION/ ./DESCRIPTION
-  sed -i s/PATCHVERSION/$PATCHVERSION/ ./DESCRIPTION
-  sed -i s/TODAYSDATE/`date +%Y-%m-%d_%H-%M`/ ./DESCRIPTION
+  sed -i '' s/MAJORVERSION/$MAJORVERSION/ ./DESCRIPTION
+  sed -i '' s/MINORVERSION/$MINORVERSION/ ./DESCRIPTION
+  sed -i '' s/PATCHVERSION/$PATCHVERSION/ ./DESCRIPTION
+  sed -i '' s/TODAYSDATE/`date +%Y-%m-%d_%H-%M`/ ./DESCRIPTION
 
-  sed -i s/MAJORVERSION/$MAJORVERSION/ ./fireSim-package.R
-  sed -i s/MINORVERSION/$MINORVERSION/ ./fireSim-package.R
-  sed -i s/PATCHVERSION/$PATCHVERSION/ ./fireSim-package.R
-  sed -i s/TODAYSDATE/`date +%Y-%m-%d_%H-%M`/ ./fireSim-package.R
+  sed -i '' s/MAJORVERSION/$MAJORVERSION/ ./fireSim-package.R
+  sed -i '' s/MINORVERSION/$MINORVERSION/ ./fireSim-package.R
+  sed -i '' s/PATCHVERSION/$PATCHVERSION/ ./fireSim-package.R
+  sed -i '' s/TODAYSDATE/`date +%Y-%m-%d_%H-%M`/ ./fireSim-package.R
 
   Rscript -e "library(roxygen2);roxygenize('pkg', roxygen.dir='pkg', copy.package=FALSE, unlink.target=FALSE)"
   rm -f ./postTangleScript.sh
 #+end_src
 
 #+results:
-: Updating collate directive in  /home/rkrug/Documents/Projects/R-Packages/seeddisp/DESCRIPTION 
-: Updating namespace directives
 
 
 * gitignore file (./.gitignore)
@@ -196,18 +195,18 @@ Complete version info
 :comments: no
 :END:
 #+begin_src fundamental
-  Package: fireSim
-  Type: Package
-  Title: Fire simulations using different routines
-  Version: MAJORVERSION.MINORVERSION-PATCHVERSION
-  Date: TODAYSDATE
-  Author: Rainer M. Krug
-  Maintainer: Rainer M Krug <Rainer@krugs.de>
-  Description: Collection of different seed fire routines.
-  License: GPL-3
-  LazyLoad: yes
-  Depends: spgrass6, RSQLite
-  LinkingTo: Rcpp  
+Package: fireSim
+Type: Package
+Title: Fire simulations using different routines
+Version: MAJORVERSION.MINORVERSION-PATCHVERSION
+Date: TODAYSDATE
+Author: Rainer M. Krug
+Maintainer: Rainer M Krug <Rainer@krugs.de>
+Description: Collection of different seed fire routines.
+License: GPL-3
+LazyLoad: yes
+Depends: spgrass6, RSQLite
+LinkingTo: Rcpp  
 #+end_src
 
 ** NAMESPACE
