--- a/fireSim.org
+++ b/fireSim.org
@@ -104,8 +104,6 @@ rm -f ./postTangleScript.sh
 #+end_src
 
 #+results:
-: Updating collate directive in  /Users/rainerkrug/Documents/Projects/R-Packages/fireSim/DESCRIPTION 
-: Updating namespace directives
 
 
 * gitignore file (./.gitignore)
@@ -227,9 +225,9 @@ LinkingTo: Rcpp
 
 #+results:
 
-** Package description (./R/seedDisp-package.R)
+** Package description (./R/package.R)
 :PROPERTIES:
-:tangle:   ./R/seedDisp-package.R
+:tangle:   ./R/package.R
 :eval: nil
 :no-expand: TRUE
 :comments: no
@@ -256,7 +254,7 @@ LinkingTo: Rcpp
 NULL
 #+end_src
 
-
+t
 * R directory (./R)
 ** Block fires
 *** fireBlockBurn (./R/fireBlockBurnGRASS.R)
@@ -330,7 +328,7 @@ Block burn design. Fire breaks limit the fires to the blocks and burning is mana
 ##' This function \bold{does not} respects MASK in GRASS.
 ##'  
 ##' 
-##' @usage fireBlockBurnGRASS(input, output, pathToGrassDB, year, doesBlockBurnFunction)
+##' @usage fireBlockBurnGRASS(input, output, pathToGrassDB, year, doesBlockBurnFunction, overwrite = FALSE)
 ##' @name fireBlockBurnGRASS
 ##' @title Block burn
 ##' 
@@ -343,6 +341,8 @@ Block burn design. Fire breaks limit the fires to the blocks and burning is mana
 ##' @param year year of evaluation
 ##' @param doesBlockBurnFunction \R function determining if a certain block
 ##' burns, taking the "fires" table in the as input
+##'
+##' @param overwrite if TRUE, the \code{output} layer will be overwritten if it exists 
 ##' 
 ##' @return invisible returns the updated attribute table of \code{input} as
 ##' \code{data.frame}
@@ -354,8 +354,12 @@ fireBlockBurnGRASS <- function(
     output,
     pathToGrassDB,
     year,
-    doesBlockBurnFunction
+    doesBlockBurnFunction,
+    overwrite = FALSE
     ) {
+    if ( length( execGRASS("g.mlist", type="rast", pattern=output, intern=TRUE) ) & !overwrite ) {
+        stop(paste("Layer", output, "exists! Please specify 'overwrite=TRUE' or use different output name!"))
+    } 
     ## Connect to grass sqlite db
     m <- dbDriver("SQLite")
     con <- dbConnect(m, pathToGrassDB)
